# faber-aeternus

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  project-layout.txt
.github/workflows/: ci.yml
src/: cli.rs  config.rs  context.rs  lib.rs  main.rs  sandbox.rs  state.rs
src/brain/: agent.rs  context.rs  coordinator.rs  dream.rs  fold.rs  memory.rs  mod.rs
src/brain/specialists/: architect.rs  coder.rs  mod.rs  reviewer.rs
src/llm/: local.rs  mod.rs  provider.rs  remote.rs
src/state/: mod.rs  snapshot.rs
src/tools/: mod.rs  parser.rs  registry.rs
src/tui/: app.rs  theme.rs
