[package]
name = "faber-aeternus"
version = "0.1.0"
edition = "2024"
description = "faber-aeternus — eternal-craftsman BYOA agentic coding harness (Rust-native TUI)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaladinX/faber-aeternus"
rust-version = "1.85"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber"]
daemon = []
library = []
test = ["dep:tempfile"]
sandbox-strict = []

[dependencies]
iocraft = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
tree-sitter = "0.25"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
candle-core = { version = "0.8", optional = true }
tempfile = { version = "3", optional = true }
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
tempfile = "3"